add events links

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 .video-youtube {
 	margin-bottom: 30px;
 }
+.calendar-event{
+	color: blue !important;
+}
 .embedresize div {
 	position: relative;
 	height: 0;
